tests/rosetta/out/Pascal/boolean-values.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:36:16Z
program BooleanValues;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

function parseBool(s: string): boolean;
var
  l: Variant;
begin
  l := LowerCase(s);
  if (((((l = '1') or (l = 't')) or (l = True)) or (l = 'yes')) or (l = 'y')) then ;
  result := False;
  exit;
end;

function main(): integer;
var
  bolStr: Variant;
  n: boolean;
  str1: string;
  x: integer;
  y: integer;
begin
  n := True;
  writeln(n);
  writeln('bool');
  n := not n;
  writeln(n);
  x := 5;
  y := 8;
  writeln('x == y:', ' ', (x = y));
  writeln('x < y:', ' ', (x < y));
  writeln('
Convert String into Boolean Data type
');
  str1 := 'japan';
  writeln('Before :', ' ', 'string');
  bolStr := parseBool(str1);
  writeln('After :', ' ', 'bool');
end;

begin
  main();
end.
